Add new features and fixed buge

--- a/css/style.css
+++ b/css/style.css
@@ -450,9 +450,9 @@ a:hover{
 	margin-top: 230px;
 }
 .banner_content h1{
-	font-weight: 600;
+	font-weight: 400;
     color: #fff;
-    font-size: 50px;
+    font-size: 45px;
     margin: 5px 0 10px;
 	text-transform: capitalize;
 }
@@ -465,7 +465,7 @@ a:hover{
 	font-size: 25px;
 }
 .banner_content h1 span .fw_600{
-	font-weight: 600;
+	font-weight: 400;
 }
 .cd-headline.clip .cd-words-wrapper::after{
     content: '';
@@ -506,6 +506,93 @@ a:hover{
 /* ----------------------------------------------------------------
     [ End Banner ]
 -----------------------------------------------------------------*/
+.home-sci a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #ffee10;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #666;
+    text-decoration: none;
+    transition: color 0.5s, box-shadow 0.5s;
+    margin: 30px 15px 30px 0;
+    animation: slideLeft 1s ease forwards;
+}
+
+.home-sci a:hover {
+
+    color: #ffee10;
+    background: #333;
+    box-shadow: 0 0 15px #ffee10;
+}
+
+.btn-box {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #ffee10;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 0.5s;
+    box-shadow: 0 0 5px #ffee10,
+        0 0 25px #ffee10
+}
+
+
+.btn-box:hover {
+    box-shadow: 0 0 5px #ffee10, 0 0 25px #ffee10, 0 0 50px #ffee10,
+        0 0 100px #ffee10, 0 0 200px #ffee10
+}
+
+
+
+
+
+.image-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    bottom: down;
+    margin-top: 20px;
+    align-items: center;
+    height: 100vh;
+}
+
+.image-container img {
+    max-width: 70%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    animation: slideIn 1s ease-in-out;
+}
+
+.image-container img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 
 
 /* ----------------------------------------------------------------
@@ -658,7 +745,7 @@ a:hover{
 
 
 /* ----------------------------------------------------------------
-    [ 08 Start Works ]
+    [ 08 Start Project ]
 -----------------------------------------------------------------*/
 .work_filter ul{
 	padding: 0;
@@ -716,7 +803,7 @@ a:hover{
 	height: 100%;
 	top: 0;
 	padding: 30px;
-	background: rgba(245, 84, 34, 0.6) none repeat scroll 0 0;
+	background: rgb(252, 0, 13) none repeat scroll 0 0;
 	opacity: 0;
 	visibility: hidden;
 	transition: 2s;
@@ -730,7 +817,7 @@ a:hover{
 	line-height: 40px;
 	border-radius: 50%;
 	text-align: center;
-	font-size: 20px;
+	font-size: 40px;
 	color: #fff;
 }
 .work_content_area:hover a{
@@ -1007,17 +1094,87 @@ a:hover{
     [ End Contact ]
 -----------------------------------------------------------------*/
 
+.contact-ic a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #ffee10;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #666;
+    text-decoration: none;
+    transition: color 0.5s, box-shadow 0.5s;
+    margin: 30px 15px 30px 0;
+    animation: slideLeft 1s ease forwards;
+}
 
-/* ----------------------------------------------------------------
-    [ 14 Start Footer ]
------------------------------------------------------------------*/
-.footer{
-    padding: 30px 0 20px;
-    background: #11141b;
+.contact-ic a:hover {
+
+    color: #ffee10;
+    background: #333;
+    box-shadow: 0 0 15px #ffee10;
 }
-.copy-text p{
-	color: #fff;
+
+.btn-box {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #ffee10;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 0.5s;
+    box-shadow: 0 0 5px #ffee10,
+        0 0 25px #ffee10
 }
+
+
+.btn-box:hover {
+    box-shadow: 0 0 5px #ffee10, 0 0 25px #ffee10, 0 0 50px #ffee10,
+        0 0 100px #ffee10, 0 0 200px #ffee10
+}
+
+
+
+.contact-list {
+    margin-bottom: 3rem;
+    align-items: center;
+}
+
+.contact-list li {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.contact-list i {
+
+    margin-bottom: 10px;
+    display: block;
+    
+}
+
+.contact-list i {
+    display: inline-block;
+    color: #e8e0e0;
+    font-size: 20px;
+    font-weight: 600;
+    transition: all .40s ease;
+    cursor: pointer;
+    
+}
+
+.contact-list li a:hover {
+    transform: scale(1.01) translateY(-5px);
+    color: #ffee10;
+}
+
 /* ----------------------------------------------------------------
     [ End Footer ]
 -----------------------------------------------------------------*/
