--- a/css/style.css
+++ b/css/style.css
@@ -560,20 +560,20 @@ a:hover{
 .image-container {
     flex: 1;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     padding: 50px;
-    margin-right: 100px;
+    margin-bottom: 20px;
     align-items: center;
     height: 100vh;
-    width: 100vh;
-    overflow: hidden;
+   
+    
 }
 
 .image-container img {
     max-width: 80%;
-    max-height: 90%;
+    max-height: 100%;
     height: auto;
-    width: auto;
+   
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
