--- a/css/style.css
+++ b/css/style.css
@@ -967,27 +967,27 @@ a:hover{
 
 
 /* ----------------------------------------------------------------
-    [ 12 Start Blog ]
+    [ 12 Start Certificate]
 -----------------------------------------------------------------*/
-.single_blog{
+.single_gallary{
 	margin-bottom: 30px;
 }
-.single_blog:hover img{
+.single_gallary:hover img{
 	-moz-transform: scale(1.03);
     -webkit-transform: scale(1.03);
     transform: scale(1.09);
 }
-.single_blog .blog-image{
+.single_gallary .gallary-image{
 	overflow: hidden;
 }
-.single_blog img{
+.single_gallary img{
 	width: 100%;
     border-radius: 3px 3px 0 0;
     -moz-transition: all 0.3s;
     -webkit-transition: all 0.3s;
     transition: all 0.5s;
 }
-.blog-thumb{
+.gallary-thumb{
 	background: transparent;
 	-webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
@@ -996,30 +996,30 @@ a:hover{
 	text-align: left;
 	margin-bottom: 30px;
 }
-.blog-thumb small{
+.gallary-thumb small{
 	color: #F95353;
 	font-weight: 500;
 	display: block;
 }
-.blog-thumb small .fa{
+.gallary-thumb small .fa{
 	margin-right: 5px;
 }
-.blog-thumb small,
-.blog-thumb small + span{
+.gallary-thumb small,
+.gallary-thumb small + span{
 	display: inline-block;
 	vertical-align: middle;
 }
-.blog-thumb small + span{
+.gallary-thumb small + span{
 	color: #777;
 	font-size: 10px;
 	font-weight: bold;
 	text-transform: capitalize;
 	margin-left: 2px;
 }
-.dark_bg .blog-thumb small + span{
+.dark_bg .gallary-thumb small + span{
 	color: #fff;
 }
-.blog-thumb h4{
+.gallary-thumb h4{
 	color: #222;
     padding: 0px;
 	text-transform: capitalize;
@@ -1028,20 +1028,20 @@ a:hover{
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
 }
-.dark_bg .blog-thumb h4{
+.dark_bg .gallary-thumb h4{
 	color: #fff;
 }
-.dark_bg .blog-thumb p{
+.dark_bg .gallary-thumb p{
 	color: #fff;
 }
-.blog-thumb h4:hover{
+.gallary-thumb h4:hover{
 	color: #F95353;
 }
-.blog-info{
+.gallary-info{
 	box-shadow: 0 1px 30px rgba(255, 255, 255, 0.2);
 	padding: 20px 30px;
 }
-.blog-info .blog_btn{
+.gallary-info .gallary_btn{
 	color: #222;
     font-size: 14px;
     margin-top: 10px;
@@ -1052,14 +1052,14 @@ a:hover{
     transition: all 0.4s ease-in-out 0s;
 	padding: 10px 0px;
 }
-.dark_bg .blog-info .blog_btn{
+.dark_bg .gallary-info .gallary_btn{
 	color: #fff;
 }
-.blog-info .blog_btn:hover{
+.gallary-info .gallary_btn:hover{
 	color: #F95353;
 }
 /* ----------------------------------------------------------------
-    [ End Blog ]
+    [ End Certificate ]
 -----------------------------------------------------------------*/
 
 
